Fix alignment

--- a/app/assets/stylesheets/main-1.6.css
+++ b/app/assets/stylesheets/main-1.6.css
@@ -258,6 +258,7 @@ body {
 
 #bg-image {
     position: fixed; 
+    top: -25%;
     left: -50%; 
     width: 200%; 
     height: 200%;
